--- a/build.gradle
+++ b/build.gradle
@@ -4,28 +4,13 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.8.+'
-    }
-}
-apply plugin: 'android'
-
-repositories {
-    mavenLocal()
-    mavenCentral()
-}
-
-android {
-    compileSdkVersion 19
-    buildToolsVersion "19.0.1"
-
-    defaultConfig {
-        minSdkVersion 10
-        targetSdkVersion 19
+        classpath 'com.android.tools.build:gradle:0.9.+'
     }
 }
 
-dependencies {
-    compile 'com.android.support:appcompat-v7:19.0.1'
-    compile 'pt.lighthouselabs.obd:obd-java-api:0.3'
-    compile 'org.roboguice:roboguice:3.0-alpha-1'
+allprojects {
+    repositories {
+        mavenLocal()
+        mavenCentral()
+    }
 }
